--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -1,5 +1,10 @@
 // Global styling for this template
 
+router-outlet ~ * {
+  position: absolute;
+  height: 100%;
+}
+
 body {
   @include body-font;
   padding-top: 54px;
