--- a/src/app/layout/components/nav-bar/nav-bar.component.html
+++ b/src/app/layout/components/nav-bar/nav-bar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
-  <a class="navbar-brand" href="#page-top">
+  <a [routerLink]="'/'" class="navbar-brand">
     <span class="d-block d-lg-none">Clarence Taylor</span>
     <span class="d-none d-lg-block">
       <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="">
