--- a/src/app/layout/components/nav-bar/nav-bar.component.html
+++ b/src/app/layout/components/nav-bar/nav-bar.component.html
@@ -12,7 +12,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a [routerLink]="'/'" routerLinkActive="active" class="nav-link">About</a>
+        <a [routerLink]="'/about'" routerLinkActive="active" class="nav-link">About</a>
       </li>
       <li class="nav-item">
         <a [routerLink]="'/experience'" routerLinkActive="active" class="nav-link">Experience</a>
