--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -14,6 +14,7 @@ $gray-800: #343a40 !default;
 $gray-900: #212529 !default;
 $black:    #000 !default;
 
+$darkblue:#00438a !default;
 $blue:    #007bff !default;
 $indigo:  #6610f2 !default;
 $purple:  #6f42c1 !default;
@@ -25,8 +26,9 @@ $green:   #28a745 !default;
 $teal:    #20c997 !default;
 $cyan:    #17a2b8 !default;
 
-$primary:       $orange !default;
+$primary:       $gray-800 !default;
 $secondary:     $gray-600 !default;
+$diff:          $darkblue !default;
 $success:       $green !default;
 $info:          $cyan !default;
 $warning:       $yellow !default;
