--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -3,7 +3,7 @@
     <h1 class="mb-0">Diego
       <span class="text-primary">Arce</span>
     </h1>
-    <div class="subheading mb-5">I'm <span></span></div>
+    <div class="subheading mb-5">I'm a <span></span></div>
     <!--<div class="subheading mb-5">3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
       <a href="mailto:name@email.com">name@email.com</a>
     </div>-->
@@ -12,16 +12,19 @@
       proposition.</p>
     <div class="social-icons">
       <a href="#">
-        <fa-icon [icon]="faLinkedinIn"></fa-icon>
+        <fa-icon [icon]="faGithub"></fa-icon>
       </a>
       <a href="#">
-        <fa-icon [icon]="faGithub"></fa-icon>
+        <fa-icon [icon]="faLinkedinIn"></fa-icon>
       </a>
       <a href="#">
         <fa-icon [icon]="faTwitter"></fa-icon>
       </a>
       <a href="#">
         <fa-icon [icon]="faFacebookF"></fa-icon>
+      </a>
+      <a href="#">
+        <fa-icon [icon]="faFileDownload"></fa-icon>
       </a>
     </div>
   </div>
