--- a/src/app/awards/awards.component.html
+++ b/src/app/awards/awards.component.html
@@ -1,5 +1,3 @@
-<hr class="m-0">
-
 <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
   <div class="w-100">
     <h2 class="mb-5">Awards &amp; Certifications</h2>
@@ -33,3 +31,4 @@
     </ul>
   </div>
 </section>
+<app-footer></app-footer>
