--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -76,9 +76,19 @@ p.lead {
 
 .dev-icons {
   font-size: 3rem;
-  .list-inline-item i {
+  .list-inline-item fa-icon {
     &:hover {
       color: $diff;
     }
   }
+}
+
+footer {
+  position: fixed;
+  bottom: 0;
+  /* Set the fixed height of the footer here */
+  width: 100%;
+  height: 70px;
+  //line-height: 60px; /* Vertically center the text there */
+  background-color: $gray-900;
 }
