--- a/src/app/education/education.component.html
+++ b/src/app/education/education.component.html
@@ -1,31 +1,18 @@
-<hr class="m-0">
-
-<section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="education">
+<section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="education"
+  *ngIf="(profile$ | async)?.education as educationArray">
   <div class="w-100">
     <h2 class="mb-5">Education</h2>
-
-    <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+    <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5"
+      *ngFor="let education of educationArray">
       <div class="resume-content">
-        <h3 class="mb-0">University of Colorado Boulder</h3>
-        <div class="subheading mb-3">Bachelor of Science</div>
-        <div>Computer Science - Web Development Track</div>
-        <p>GPA: 3.23</p>
-      </div>
-      <div class="resume-date text-md-right">
-        <span class="text-primary">August 2006 - May 2010</span>
-      </div>
-    </div>
-
-    <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
-      <div class="resume-content">
-        <h3 class="mb-0">James Buchanan High School</h3>
-        <div class="subheading mb-3">Technology Magnet Program</div>
+        <h3 class="mb-0">{{ education.place }}</h3>
+        <div class="subheading mb-3">{{ education.title }}</div>
         <p>GPA: 3.56</p>
       </div>
-      <div class="resume-date text-md-right">
-        <span class="text-primary">August 2002 - May 2006</span>
-      </div>
+      <div class="resume-date text-md-right" *ngIf="education.since;then sinte_to else to"></div>
+      <ng-template #sinte_to><span class="text-primary">{{ education.since }} - {{ education.to }}</span>
+      </ng-template>
+      <ng-template #to><span class="text-primary">{{ education.to }}</span></ng-template>
     </div>
-
   </div>
 </section>
